# multiprocessor

./: CMakeLists.txt  README.md
api/: CMakeLists.txt
api-alin/: CMakeLists.txt
api-alin/include/: about preprocessed_api_parser  preprocessed_api_parser.c
api-alin/include/api/: api.h  api.inl  api_parser.h
api-alin/src/: api.c  api_parser.c
api-alin/tests/: api-alin_test.cpp
api/include/api/: api.h  api_parser.h
api/src/: api.c  api_parser.c
api/tests/: ApiTests.cpp  api_tests.c
aravis_hack/debian/: aravis-tools-cli.install  aravis-tools.install  changelog  control  copyright  libaravis-0.8-0.install  libaravis-dev.install  rules  watch
aravis_hack/debian/patches/: grab_stream.patch  series
aravis_hack/debian/source/: options
arvcamera/: CMakeLists.txt
arvcamera/examples/: arvcapture.cpp  arvsource.cpp  macros.c
arvcamera/include/arvcamera/: arvcamera.h  arvcollector.h  arvgenerator.h
arvcamera/src/: arvcollector.cpp  arvgenerator.cpp
arvcamera/tools/: arvclient.cpp  arvserver.cpp
capture/: CMakeLists.txt
capture/examples/: print_addr.c
capture/include/capture/: camera.h  device.h  gvcp.h  gvsp.h  interface.h  list.h  ring_buffer.h  source.h
capture/src/: camera.c  device.c  gvcp.c  interface.c  ring_buffer.c  source.c
capture/tools/: capture.c  finddevices.c  test_capture.c
capture/Новая папка/: wireshark_m.json
command_server/: CMakeLists.txt
command_server/examples/: client.c  server.c
command_server/include/command_server/: command_server.h
command_server/src/: command_server.c
config/: CMakeLists.txt
config/include/config/: config.h  module_description.h
config/src/: config.cpp
config/tests/: bad_test.json  config_test.cpp  ill_test.json  too_many_FIRST_types_test.json  too_many_null_name_test.json
cvcamera/: CMakeLists.txt
cvcamera/examples/: cvdata.cpp
cvcamera/include/cvcamera/: cvcamera.h  cvcollector.h  cvgenerator.h
cvcamera/src/: cvcollector.cpp  cvgenerator.cpp
cvcamera/tools/: cvclient.cpp  cvserver.cpp  raw2bmp.cpp
cvfilter/: CMakeLists.txt
cvfilter/examples/: cvradius.cpp
cvfilter/include/cvfilter/: cvfilter.h  cvparams.h
cvfilter/src/: cvfilter.cpp
cvfilter/tests/: FilterTests.cpp
dbpg/: CMakeLists.txt
dbpg/cmake/modules/: FindPQXX.cmake
dbpg/examples/: connect.cpp  connect.py
emu/: CMakeLists.txt
emu/examples/: cvclient.cpp  cvradius.cpp  cvserver.cpp  cvtest.cpp  data.c
emu/include/filter/: cvfilter.h  cvparams.h
emu/src/: cvfilter.cpp
emu/tests/: FilterTests.cpp
filereader/: CMakeLists.txt
filereader/include/filereader/: imageprocess.h
filereader/src/: filelist.c  filereader.c  imageprocess.c  ocvprocess.cpp
messenger/: CMakeLists.txt
messenger/examples/: client.c  module.c  proxy.c  server.c
messenger/include/messenger/: messenger.h
messenger/src/: messenger.c
misc/: CMakeLists.txt
misc/include/misc/: list.h  log.h
misc/src/: ring_buffer.c
model/: CMakeLists.txt
model/components/: filter.c  manager-alin.c  manager.c  server.c
model/config/: pipeline_demo.json
model/include/model/: command_server.h  model.h  module_t.h
model/src/: command_server-alin.c  command_server.c  model.c
pipeline/: CMakeLists.txt
pipeline/components/: first.c  manager.c  middle.c  server.c
pipeline/config/: pipeline_demo.json
pipeline/include/pipeline/: pipeline.h
pipeline/src/: pipeline_client.c  pipeline_server.c
pmngr/: CMakeLists.txt
pmngr/include/pmngr/: process_api.h  process_mngr.h  signal_reaction.h
pmngr/src/: process_mngr.c  signal_reaction.c
proc_client/: capturer.c  filter.c
proc_server/: command_server.h  list.h  memory_map.h  pipeline.c  pipeline.h  process_mngr.c  process_mngr.h  ring_buffer.c  ring_buffer.h  server.c  shared_memory.c  shared_memory.h  shared_memory_map.h  signal_reaction.c  signal_reaction.h  streamer.c  streamer.h
pysharedmem/: FrameWrapper.cpp  FrameWrapper.h  FramesetWrapper.cpp  FramesetWrapper.h  ObjectDescriptorWrapper.cpp  ObjectDescriptorWrapper.h  build.sh  py_wrapper.cpp  setup.py  test.cpp  test.h  test.py
scripts/: add author.sh  add_author.sh
shmem/: CMakeLists.txt
shmem/examples/: reader.c  server.c  writer.c
shmem/include/shmem/: shared_memory.h  shared_memory_map.h
shmem/src/: shared_memory.c
storage_interface/: CMakeLists.txt
storage_interface/examples/: name.c  storage_client_reader.cpp  storage_client_writer.cpp  storage_server.c  storage_server.cpp
storage_interface/include/storage_interface/: name_generator.h  storage_interface.h
storage_interface/src/: storage_interface.cpp
storage_interface/tests/: StorageInterfaceTests.cpp
stream/: CMakeLists.txt
stream/examples/: gclient.c  gserver.c
streamer/: CMakeLists.txt
streamer/examples/: capturer.c  server.c
streamer/include/streamer/: pipeline.h  streamer.h
streamer/src/: pipeline.c  streamer.c
tcp/: CMakeLists.txt
tcp/examples/: client.c  server.c
tcp/include/tcp/: tcp_process.h
tcp/src/: tcp_process.c
